--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.url=jdbc:h2:file:./db
 spring.h2.console.enabled=true
 spring.h2.console.path=/console
 vaadin.servlet.productionMode=true
+java.runtime.version=11
