--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,7 @@
 					<execution>
 						<goals>
 							<goal>prepare-frontend</goal>
+							<goal>build-frontend</goal>
 						</goals>
 					</execution>
 				</executions>
