--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,11 @@
 			<version>1.9.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
