--- a/pom.xml
+++ b/pom.xml
@@ -190,25 +190,15 @@
 					<plugin>
 						<groupId>com.vaadin</groupId>
 						<artifactId>vaadin-maven-plugin</artifactId>
+						<version>${vaadin.version}</version>
 						<executions>
 							<execution>
 								<goals>
-									<goal>prepare-frontend</goal>
 									<goal>build-frontend</goal>
 								</goals>
 								<phase>compile</phase>
 							</execution>
 						</executions>
-					</plugin>
-					<plugin>
-						<groupId>com.heroku.sdk</groupId>
-						<artifactId>heroku-maven-plugin</artifactId>
-						<version>2.0.13</version>
-						<configuration>
-							<processTypes>
-								<web>java $JAVA_OPTS -jar target/car-exchange-0.0.1-SNAPSHOT.jar --server.port=$PORT</web>
-							</processTypes>
-						</configuration>
 					</plugin>
 				</plugins>
 			</build>
