--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.url=jdbc:h2:file:./db
 spring.h2.console.enabled=true
 spring.h2.console.path=/console
+
+vaadin.compatibilityMode = false
+logging.level.org.atmosphere = warn
