Configuration for heroku

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,6 @@ spring.datasource.url=jdbc:h2:file:./db
 spring.h2.console.enabled=true
 spring.h2.console.path=/console
 
+vaadin.servlet.productionMode=true
 vaadin.compatibilityMode = false
 logging.level.org.atmosphere = warn
