--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=${port:8080}
+server.port=8080
 spring.jpa.properties.hibernate.hbm2ddl.auto=create
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -7,7 +7,3 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.url=jdbc:h2:file:./db
 spring.h2.console.enabled=true
 spring.h2.console.path=/console
-
-vaadin.servlet.productionMode=true
-vaadin.compatibilityMode = false
-logging.level.org.atmosphere = warn
