--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=${port:8080}
 spring.jpa.properties.hibernate.hbm2ddl.auto=create
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
